navi collapsing too early - MkDocs-Material bug/issue

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -13,12 +13,63 @@ File: docs/assets/stylesheets/extra.css
 */
 
 /*
+copied from partials/comp/main.123.min.css:
+*/
+
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-size: .5rem;
+  min-height: 100%;
+  position: relative;
+  width: 100%
+}
+
+/* hide docs.annebrown.ca from top of left sidebar toc */
+label.md-nav__title {
+  visibility: hidden;
+}
+
+@media screen and (min-width: 60em) {
+  .md-sidebar--secondary {
+      height:0
+  }
+
+  .no-js .md-sidebar--secondary {
+      height: auto
+  }
+
+  .md-sidebar--secondary:not([hidden]) {
+      display: block
+  }
+
+  .md-sidebar--secondary .md-sidebar__scrollwrap {
+      touch-action: pan-y
+  }
+}
+}
+.md-grid {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 61rem;
+}
+@media screen and (max-width: 300em5em) {
+  .md-typeset .md-consent__controls .md-button {
+      display:block;
+      margin-top: .4rem;
+      text-align: center;
+      width: 100%
+  }
+}
+
+/*
 ================================================================================
 Body
 ================================================================================
 */
 body {
-  width: 100% !important;
+  /* width: 100% !important; */
 }
 /*
 ================================================================================
@@ -68,24 +119,35 @@ Page
 Right Sidebar
 ================================================================================
 */
-#right-sidebar {
-  width: 10rem;
+media screen and (min-width: 60em) {
+  .md-sidebar--secondary:not([hidden]) {
+      display: block;
+  }
 }
 
+
+
+/* #right-sidebar {
+
+ */
 /*
 ================================================================================
 Cards
 ================================================================================
 */
 .outter-container {
-  padding: 0.5rem;
+  margin: 0; padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /* Fractional  */
   gap: 10px;
-    /* column-gap: 10px; 
-    row-gap: 20px; */
+/* 
+  column-gap: 10px; 
+  row-gap: 20px; 
+*/
 }
 .item-00 {
+  padding: 0 1rem 0 1rem;
+  margin: 0 0 0 0;
   text-align: center;
   border: 0.25px solid gray;
 }
@@ -97,7 +159,7 @@ Margins and Padding
 .marg-0 { margin: 0; }
 .padd-0 { padding: 0; }
 
-.marg-top-0 { margin-top: 0; }
+.marg-top-0 {margin-top: 0; }
 .padd-top-0 { padding-top: 0; }
 .padd-top-02 { padding-top: 0.2rem; }
 .padd-top-05 { padding-top: 0.5rem; }
